--- a/css/style.css
+++ b/css/style.css
@@ -8,5 +8,5 @@
 #myself .skill h2 img {position: relative; top: -10px;}
 #myself dl {text-align: left;}
 #myself dt,
-#myself dt {margin-top: 14px; font-size: 16px; font-weight: 700; color: #4e83df;}
+#myself dt {margin-top: 14px; font-size: 16px; font-weight: 700; color: #999ee5;}
 #myself dd {padding: 0 8px;}
